# schwarzschild_geodesics

./: README.md  gjeodezika_schwarzschild_notebook.ipynb  main.py  pyproject.toml
schwarzschild_geodesics/: __init__.py  constants.py
schwarzschild_geodesics/models/: geodesic_equations.py  lagrangian.py  metric.py
schwarzschild_geodesics/numerics/: integrators.py  solver.py
schwarzschild_geodesics/visualization/: orbits.py  potentials.py
